custom css added & header input added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/fonts.css">
-    <link rel="stylesheet" href="styles/customStyles.css">
+    <link rel="stylesheet" href="styles/custom.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/responsive.css">
 </head>
@@ -34,6 +34,8 @@
 
             <a class="fa fa-bars menu-icon"></a>
         </nav>
+        <input type="text" name="" id="" placeholder="" class="border-0 outline-0">
+        <button class="outline-0">Click Me</button>
     </div>
 
 </header>
