--- a/index.html
+++ b/index.html
@@ -34,8 +34,26 @@
 
             <a class="fa fa-bars menu-icon"></a>
         </nav>
-        <input type="text" name="" id="" placeholder="" class="border-0 outline-0">
-        <button class="outline-0">Click Me</button>
+        <div class="row align-items-center header-content">
+            <div class="col-md-6">
+                <h1 class="header-title text-white mb-0">Lorem ipsum dolor sit amet</h1>
+                <p class="header-caption text-white"> Error est laborum fugit perspiciatis omnis </p>
+                <div class="domain d-flex">
+                    <input type="text" name="" id="" placeholder="Search for a domain name" class="header-txt border-0 outline-0">
+                    <select name="" id="" class="header-domains border-0 outline-0">
+                        <option value=".com">.com</option>
+                        <option value=".net">.net</option>
+                        <option value=".org">.org</option>
+                        <option value=".co">.co</option>
+                        <option value=".ir">.ir</option>
+                    </select>
+                    <button class="btn-primary header-btn">Check Availability</button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img src="images/header.png" alt="Header Image" class="w-100">
+            </div>
+        </div>
     </div>
 
 </header>
