--- a/index.html
+++ b/index.html
@@ -59,7 +59,43 @@
     </div>
 
 </header>
-
+<main>
+    <div class="container">
+        <section class="services">
+            <h2 class="section-title">What will you get if you join us</h2>
+            <p class="section-caption">Get the best web hosting service at price you can afford</p>
+            <div class="row">
+                <div class="col-12 col-lg-6 service-col-1">
+                    <div class="service d-flex mt-0">
+                        <img src="images/service1.svg" alt="Service 1">
+                        <div class="service-content">
+                             <h3 class="mt-0">WE GIVE A CARE</h3>
+                             <p class="m-0">Beside the support we provide you with various tools to be able to host and manage your websites</p>
+                        </div>
+                    </div>
+                    <div class="service d-flex">
+                        <img src="images/service2.svg" alt="Service 2">
+                        <div class="service-content">
+                             <h3 class="mt-0">TWEAK AS YOU WISH</h3>
+                             <p class="m-0">Be able to customize your plan over time if needed so you pay only for what you use</p>
+                        </div>
+                    </div>
+                    <div class="service d-flex">
+                        <img src="images/service3.svg" alt="Service 3">
+                        <div class="service-content">
+                             <h3 class="mt-0">SECURITY AT ITS BEST</h3>
+                             <p class="m-0">We are the most reliable service provider, ready to give you a helping hand the fastest way possible 24/7</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 service-col-2">
+                    <img src="images/services.png" alt="services" class="w-100 services-img">
+                </div>
+            </div>
+        </section>
+    </div>
+    
+</main>
 <script src="scripts/app.js"></script>
 </body>
 </html>
