--- a/index.html
+++ b/index.html
@@ -93,6 +93,47 @@
                 </div>
             </div>
         </section>
+
+        <section class="start">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <div class="start-box">
+                            <div class="start-logo">
+                                <img src="images/start-box1.svg" alt="">
+                            </div>
+                            <h3 class="start-title">
+                                PLANING TO BUILD A WEBSITE
+                            </h3>
+                            <p class="start-description">
+                                You want to build a new website but not sure what to start with? We've prepared a step by step guide for you to handle the whole process from design to launch
+                            </p>
+                          <button class="btn-primary start-btn">
+                                Learn More <span class="fa fa-angle-right" aria-hidden="true"></span>
+                            </button>
+                            <img src="images/Clouds.png" alt="" class="start-img-fix">
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <div class="start-box start-box-2">
+                            <div class="start-logo start-logo2">
+                                <img src="images/start-box2.svg" alt="">
+                            </div>
+                            <h3 class="start-title">
+                                WANT TO MOVE A WEBSITE TO SERVION
+                            </h3>
+                            <p class="start-description">
+                                Already have an existing website and want to move it to Servion but not sure how to do it? No worries, it's not difficult, we can handle all the work for you
+                            </p>
+                            <button class="btn-primary start-btn">
+                                    Learn More <span class="fa fa-angle-right" aria-hidden="true"></span>
+                            </button>
+                            <img src="images/Logos.png" alt="" class="start-img-fix">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     
 </main>
