--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -5,86 +6,82 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HostingPage | Sadegh Maaleki</title>
+    <title>Sadegh Maaleki</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/custom.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/app.css">
     <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
 <header>
     <div class="container">
         <nav class="nav">
-
             <div class="logo-wrapper">
                 <img src="images/logo.png" alt="logo" class="logo-img">
             </div>
-
             <ul class="main-menu">
                 <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
                 <li class="menu-item"><a href="#" class="menu-link">Services</a></li>
                 <li class="menu-item"><a href="#" class="menu-link">Our Plans</a></li>
                 <li class="menu-item"><a href="#" class="menu-link">Tools & Recources</a></li>
-                <li class="menu-item"><a href="#" class="menu-link login-btn">Login <span class="fa fa-user"></span></a>
+                <li class="menu-item mr-0"><a href="#" class="menu-link login-btn">Login <span class="fa fa-user"></span></a>
                 </li>
             </ul>
-
             <a class="fa fa-bars menu-icon"></a>
         </nav>
         <div class="row align-items-center header-content">
-            <div class="col-md-6 content-wrapper">
-                <h1 class="header-title text-white mb-0">Lorem ipsum dolor sit amet</h1>
-                <p class="header-caption text-white"> Error est laborum fugit perspiciatis omnis </p>
-                <div class="domain d-block d-lg-flex ">
-                    <div class="d-flex domain-wrapper">
-                        <input type="text" name="" id="" placeholder="Search for a domain name" class="header-txt border-0 outline-0">
-                        <select name="" id="" class="header-domains border-0 outline-0">
-                            <option value=".com">.com</option>
-                            <option value=".net">.net</option>
-                            <option value=".org">.org</option>
-                            <option value=".co">.co</option>
-                            <option value=".ir">.ir</option>
+            <div class="col-md-6 content">
+                <h1 class="header-title text-white mb-0">Web Hosting Easy and Secure</h1>
+                <p class="header-caption text-white">Full control of what you use and pay for</p>
+                <div class="domain d-block d-lg-flex">
+                    <div class="d-flex flex-wrapper">
+                        <input type="text" placeholder="Search for a domain name" class="header-txt border-0 outline-0">
+                        <select class="header-domians border-0 outline-0">
+                            <option>.com</option>
+                            <option>.ir</option>
+                            <option>.net</option>
+                            <option>.me</option>
                         </select>
                     </div>
-                    <button class="btn-primary header-btn">Check Availability</button>
+                    <button class="btn-primary header-btn">CHECK AVAILABILITY</button>
                 </div>
             </div>
-            <div class="col-md-6 header-img">
-                <img src="images/header.png" alt="Header Image" class="w-100">
+            <div class="col-md-6 img">
+                <img src="images/header.png" alt="header" class="w-100">
             </div>
         </div>
     </div>
-
 </header>
+
 <main>
-    <div class="container">
-        <section class="services">
-            <h2 class="section-title">What will you get if you join us</h2>
-            <p class="section-caption">Get the best web hosting service at price you can afford</p>
+    <section class="services">
+        <div class="container">
+            <h2 class="section-title">What will you get if you'll join us</h2>
+            <p class="section-caption">Get the best web hosting service at the price you can afford</p>
             <div class="row">
                 <div class="col-12 col-lg-6 service-col-1">
                     <div class="service d-flex mt-0">
-                        <img src="images/service1.svg" alt="Service 1">
+                        <img src="images/service1.svg">
                         <div class="service-content">
-                             <h3 class="mt-0">WE GIVE A CARE</h3>
-                             <p class="m-0">Beside the support we provide you with various tools to be able to host and manage your websites</p>
+                            <h3 class="mt-0">WE GIVE A CARE</h3>
+                            <p class="m-0">Beside the support we provide you with various tools to be able to host and manage your websites</p>
                         </div>
                     </div>
                     <div class="service d-flex">
-                        <img src="images/service2.svg" alt="Service 2">
+                        <img src="images/service2.svg">
                         <div class="service-content">
-                             <h3 class="mt-0">TWEAK AS YOU WISH</h3>
-                             <p class="m-0">Be able to customize your plan over time if needed so you pay only for what you use</p>
+                            <h3 class="mt-0">TWEAK AS YOU WISH</h3>
+                            <p class="m-0">Be able to customize your plan over time if needed so you pay only for what you use</p>
                         </div>
                     </div>
                     <div class="service d-flex">
-                        <img src="images/service3.svg" alt="Service 3">
+                        <img src="images/service3.svg">
                         <div class="service-content">
-                             <h3 class="mt-0">SECURITY AT ITS BEST</h3>
-                             <p class="m-0">We are the most reliable service provider, ready to give you a helping hand the fastest way possible 24/7</p>
+                            <h3 class="mt-0">SECURITY AT ITS BEST</h3>
+                            <p class="m-0">We are the most reliable service provider, ready to give you a helping hand the fastest way possible 24/7</p>
                         </div>
                     </div>
                 </div>
@@ -92,51 +89,41 @@
                     <img src="images/services.png" alt="services" class="w-100 services-img">
                 </div>
             </div>
-        </section>
-
-        <section class="start">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-lg-6">
-                        <div class="start-box">
-                            <div class="start-logo">
-                                <img src="images/start-box1.svg" alt="">
-                            </div>
-                            <h3 class="start-title">
-                                PLANING TO BUILD A WEBSITE
-                            </h3>
-                            <p class="start-description">
-                                You want to build a new website but not sure what to start with? We've prepared a step by step guide for you to handle the whole process from design to launch
-                            </p>
-                          <button class="btn-primary start-btn">
-                                Learn More <span class="fa fa-angle-right" aria-hidden="true"></span>
-                            </button>
-                            <img src="images/Clouds.png" alt="" class="start-img-fix">
+        </div>
+    </section>
+    <section class="start">
+        <div class="container">
+            <h2 class="section-title">Don't know where to start from?</h2>
+            <p class="section-caption">We've got the best articles,tools and resources to help you to start</p>
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="start-box start-1">
+                        <div class="start-logo start-logo1">
+                            <img src="images/start-box1.svg">
                         </div>
+                        <h3 class="start-title">PLANING TO BUILD A WEBSITE</h3>
+                        <p class="start-description">You want to build a new website but not sure what to start with? We've prepared a step by step guide for you to handle the whole process from design to launch </p>
+                        <button class="btn-primary start-btn">LEARN MORE <i class="fa fa-angle-right"></i></button>
+                        <img src="images/Clouds.png" class="start-img-fix">
                     </div>
-                    <div class="col-12 col-lg-6">
-                        <div class="start-box start-box-2">
-                            <div class="start-logo start-logo2">
-                                <img src="images/start-box2.svg" alt="">
-                            </div>
-                            <h3 class="start-title">
-                                WANT TO MOVE A WEBSITE TO SERVION
-                            </h3>
-                            <p class="start-description">
-                                Already have an existing website and want to move it to Servion but not sure how to do it? No worries, it's not difficult, we can handle all the work for you
-                            </p>
-                            <button class="btn-primary start-btn">
-                                    Learn More <span class="fa fa-angle-right" aria-hidden="true"></span>
-                            </button>
-                            <img src="images/Logos.png" alt="" class="start-img-fix">
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="start-box start-2">
+                        <div class="start-logo start-logo2">
+                            <img src="images/start-box2.svg">
                         </div>
+                        <h3 class="start-title">WANT TO MOVE A WEBSITE TO SERVION</h3>
+                        <p class="start-description">Already have an existing website and want to move it to Servion but not sure how to do it? No worries, it's not difficult, we can handle all the work for you.  </p>
+                        <button class="btn-primary start-btn">LEARN MORE <i class="fa fa-angle-right"></i></button>
+                        <img src="images/Logos.png" class="start-img-fix">
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
-    
+        </div>
+
+    </section>
 </main>
+
 <script src="scripts/app.js"></script>
 </body>
 </html>
