--- a/index.html
+++ b/index.html
@@ -122,6 +122,80 @@
         </div>
 
     </section>
+
+    <section class="plans">
+        <div class="container">
+            <h2 class="section-title">Types of hosting that we provide</h2>
+            <p class="section-caption">Our service is always affordable for everyone.</p>
+
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="plan">
+                        <div class="plan-top">
+                            <img src="" alt="">
+                            <h3 class="plan-title"></h3>
+                            <p class="plan-description"></p>
+
+                        </div>
+                        <div class="plan-bottom">
+                            <p></p>
+                            <p class="plan-price"><small></small></p>
+
+                            <a href="#" class="btn-primary plan-btn"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="plan">
+                        <div class="plan-top">
+                            <img src="" alt="">
+                            <h3 class="plan-title"></h3>
+                            <p class="plan-description"></p>
+
+                        </div>
+                        <div class="plan-bottom">
+                            <p></p>
+                            <p class="plan-price"><small></small></p>
+
+                            <a href="#" class="btn-primary plan-btn"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="plan">
+                        <div class="plan-top">
+                            <img src="" alt="">
+                            <h3 class="plan-title"></h3>
+                            <p class="plan-description"></p>
+
+                        </div>
+                        <div class="plan-bottom">
+                            <p></p>
+                            <p class="plan-price"><small></small></p>
+
+                            <a href="#" class="btn-primary plan-btn"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="plan">
+                        <div class="plan-top">
+                            <img src="" alt="">
+                            <h3 class="plan-title"></h3>
+                            <p class="plan-description"></p>
+
+                        </div>
+                        <div class="plan-bottom">
+                            <p></p>
+                            <p class="plan-price"><small></small></p>
+
+                            <a href="#" class="btn-primary plan-btn"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 
 <script src="scripts/app.js"></script>
