--- a/index.html
+++ b/index.html
@@ -132,64 +132,60 @@
                 <div class="col-md-3">
                     <div class="plan">
                         <div class="plan-top">
-                            <img src="" alt="">
-                            <h3 class="plan-title"></h3>
-                            <p class="plan-description"></p>
+                            <img src="images/plan1.png" alt="" class="plan-img">
+                            <h3 class="plan-title">SHARED HOSTING</h3>
+                            <p class="plan-description">Increase the rank of your website by the higher speed</p>
 
                         </div>
                         <div class="plan-bottom">
-                            <p></p>
-                            <p class="plan-price"><small></small></p>
-
-                            <a href="#" class="btn-primary plan-btn"></a>
+                            <p class="m-0">Get started at</p>
+                            <p class="plan-price mb-0">$15.99/<small>month</small></p>
+                            <a href="#" class="btn-primary plan-btn mx-auto">Customize Plan<span class="fa fa-angle-right"></span></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="plan">
                         <div class="plan-top">
-                            <img src="" alt="">
-                            <h3 class="plan-title"></h3>
-                            <p class="plan-description"></p>
+                            <img src="images/plan1.png" alt="" class="plan-img">
+                            <h3 class="plan-title">SHARED HOSTING</h3>
+                            <p class="plan-description">Increase the rank of your website by the higher speed</p>
 
                         </div>
                         <div class="plan-bottom">
-                            <p></p>
-                            <p class="plan-price"><small></small></p>
-
-                            <a href="#" class="btn-primary plan-btn"></a>
+                            <p class="m-0">Get started at</p>
+                            <p class="plan-price mb-0">$15.99/<small>month</small></p>
+                            <a href="#" class="btn-primary plan-btn mx-auto">Customize Plan<span class="fa fa-angle-right"></span></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="plan">
                         <div class="plan-top">
-                            <img src="" alt="">
-                            <h3 class="plan-title"></h3>
-                            <p class="plan-description"></p>
+                            <img src="images/plan1.png" alt="" class="plan-img">
+                            <h3 class="plan-title">SHARED HOSTING</h3>
+                            <p class="plan-description">Increase the rank of your website by the higher speed</p>
 
                         </div>
                         <div class="plan-bottom">
-                            <p></p>
-                            <p class="plan-price"><small></small></p>
-
-                            <a href="#" class="btn-primary plan-btn"></a>
+                            <p class="m-0">Get started at</p>
+                            <p class="plan-price mb-0">$15.99/<small>month</small></p>
+                            <a href="#" class="btn-primary plan-btn mx-auto">Customize Plan<span class="fa fa-angle-right"></span></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="plan">
                         <div class="plan-top">
-                            <img src="" alt="">
-                            <h3 class="plan-title"></h3>
-                            <p class="plan-description"></p>
+                            <img src="images/plan1.png" alt="" class="plan-img">
+                            <h3 class="plan-title">SHARED HOSTING</h3>
+                            <p class="plan-description">Increase the rank of your website by the higher speed</p>
 
                         </div>
                         <div class="plan-bottom">
-                            <p></p>
-                            <p class="plan-price"><small></small></p>
-
-                            <a href="#" class="btn-primary plan-btn"></a>
+                            <p class="m-0">Get started at</p>
+                            <p class="plan-price mb-0">$15.99/<small>month</small></p>
+                            <a href="#" class="btn-primary plan-btn mx-auto">Customize Plan<span class="fa fa-angle-right"></span></a>
                         </div>
                     </div>
                 </div>
