--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container">
             <h2 class="section-title">What will you get if you'll join us</h2>
             <p class="section-caption">Get the best web hosting service at the price you can afford</p>
-            <div class="row">
+            <div class="row mt-80">
                 <div class="col-12 col-lg-6 service-col-1">
                     <div class="service d-flex mt-0">
                         <img src="images/service1.svg">
@@ -95,7 +95,7 @@
         <div class="container">
             <h2 class="section-title">Don't know where to start from?</h2>
             <p class="section-caption">We've got the best articles,tools and resources to help you to start</p>
-            <div class="row">
+            <div class="row  mt-80">
                 <div class="col-12 col-lg-6">
                     <div class="start-box start-1">
                         <div class="start-logo start-logo1">
@@ -128,8 +128,8 @@
             <h2 class="section-title">Types of hosting that we provide</h2>
             <p class="section-caption">Our service is always affordable for everyone.</p>
 
-            <div class="row">
-                <div class="col-md-3">
+            <div class="row mt-80">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="plan">
                         <div class="plan-top">
                             <img src="images/plan1.png" alt="" class="plan-img">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="plan">
                         <div class="plan-top">
                             <img src="images/plan1.png" alt="" class="plan-img">
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="plan">
                         <div class="plan-top">
                             <img src="images/plan1.png" alt="" class="plan-img">
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="plan">
                         <div class="plan-top">
                             <img src="images/plan1.png" alt="" class="plan-img">
@@ -190,6 +190,29 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    
+    <section class="clients">
+        <div class="container">
+            <h2 class="section-title">Our Clients</h2>
+            <p class="section-caption">You can be the next one and may start for free</p>
+            <ul class="clients-logo d-flex mt-80">
+                <li><img src="images/reddit-1.png" alt=""></li>
+                <li><img src="images/robinhood-1.png" alt=""></li>
+                <li><img src="images/tunein.png" alt=""></li>
+                <li><img src="images/upcase.png" alt=""></li>
+                <li><img src="images/hubspot.png" alt=""></li>
+            </ul>
+
+            <a href="#" class="btn-primary btn-clients">Get Free Trial</a>
+        </div>
+    </section>
+
+    <section class="comments">
+        <div class="container">
+            <h2 class="section-title">Valued customers with valuable feedback</h2>
+            <p class="section-caption">Feedbacks from our happy users. Become one of them.</p>
         </div>
     </section>
 </main>
