comments initial html and css

--- a/index.html
+++ b/index.html
@@ -193,6 +193,62 @@
         </div>
     </section>
     
+    <section class="comments">
+        <div class="container">
+            <h2 class="section-title">Valued customers with valuable feedback</h2>
+            <p class="section-caption">Feedbacks from our happy users. Become one of them.</p>
+
+           <div class="row">
+                <div class="col-6">
+                    <div class="comment d-flex">
+                        <div>
+                            <img src="/images/person1.png" alt="person 1" class="comment-img">
+                        </div>
+                        <div class="comment-content">
+                            <div class="comment-rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <div class="comment-body">
+                                <p>"I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is"<p>
+                                <p class="comment-person">
+                                    - Emily Hartman
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="comment d-flex">
+                        <div>
+                            <img src="/images/person2.png" alt="person 1" class="comment-img">
+                        </div>
+                        <div class="comment-content">
+                            <div class="comment-rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <div class="comment-body">
+                                <p>"I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is"<p>
+                                <p class="comment-person">
+                                    - Emily Hartman
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+           </div>
+        </div>
+        <img src="images/dotted_square.png" class="comments-img comments-img1">
+        <img src="images/dotted_square.png" class="comments-img comments-img2">
+    </section>
+
     <section class="clients">
         <div class="container">
             <h2 class="section-title">Our Clients</h2>
@@ -209,12 +265,7 @@
         </div>
     </section>
 
-    <section class="comments">
-        <div class="container">
-            <h2 class="section-title">Valued customers with valuable feedback</h2>
-            <p class="section-caption">Feedbacks from our happy users. Become one of them.</p>
-        </div>
-    </section>
+
 </main>
 
 <script src="scripts/app.js"></script>
