--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/owl.carousel.min.css">
+    <link rel="stylesheet" href="styles/owl.theme.default.min.css">
     <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/custom.css">
     <link rel="stylesheet" href="styles/app.css">
@@ -197,9 +199,9 @@
         <div class="container">
             <h2 class="section-title">Valued customers with valuable feedback</h2>
             <p class="section-caption">Feedbacks from our happy users. Become one of them.</p>
-
-           <div class="row">
-                <div class="col-6">
+        
+            <div class="owl-carousel owl-theme mt-80"> 
+                <div>    
                     <div class="comment d-flex">
                         <div>
                             <img src="/images/person1.png" alt="person 1" class="comment-img">
@@ -221,7 +223,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div>
                     <div class="comment d-flex">
                         <div>
                             <img src="/images/person2.png" alt="person 1" class="comment-img">
@@ -243,7 +245,51 @@
                         </div>
                     </div>
                 </div>
-           </div>
+                <div>
+                    <div class="comment d-flex">
+                        <div>
+                            <img src="/images/person2.png" alt="person 1" class="comment-img">
+                        </div>
+                        <div class="comment-content">
+                            <div class="comment-rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <div class="comment-body">
+                                <p>"I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is"<p>
+                                <p class="comment-person">
+                                    - Emily Hartman
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="comment d-flex">
+                        <div>
+                            <img src="/images/person2.png" alt="person 1" class="comment-img">
+                        </div>
+                        <div class="comment-content">
+                            <div class="comment-rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <div class="comment-body">
+                                <p>"I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is"<p>
+                                <p class="comment-person">
+                                    - Emily Hartman
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <img src="images/dotted_square.png" class="comments-img comments-img1">
         <img src="images/dotted_square.png" class="comments-img comments-img2">
@@ -267,7 +313,8 @@
 
 
 </main>
-
+<script src="scripts/Jquery.min.js"></script>
+<script src="scripts/owl.carousel.min.js"></script>
 <script src="scripts/app.js"></script>
 </body>
 </html>
