--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="container">
             <h2 class="section-title">What will you get if you'll join us</h2>
             <p class="section-caption">Get the best web hosting service at the price you can afford</p>
-            <div class="row mt-80">
+            <div class="row pt-80">
                 <div class="col-12 col-lg-6 service-col-1">
                     <div class="service d-flex mt-0">
                         <img src="images/service1.svg">
@@ -97,7 +97,7 @@
         <div class="container">
             <h2 class="section-title">Don't know where to start from?</h2>
             <p class="section-caption">We've got the best articles,tools and resources to help you to start</p>
-            <div class="row  mt-80">
+            <div class="row  pt-80">
                 <div class="col-12 col-lg-6">
                     <div class="start-box start-1">
                         <div class="start-logo start-logo1">
@@ -130,7 +130,7 @@
             <h2 class="section-title">Types of hosting that we provide</h2>
             <p class="section-caption">Our service is always affordable for everyone.</p>
 
-            <div class="row mt-80">
+            <div class="row pt-80">
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="plan">
                         <div class="plan-top">
@@ -200,7 +200,95 @@
             <h2 class="section-title">Valued customers with valuable feedback</h2>
             <p class="section-caption">Feedbacks from our happy users. Become one of them.</p>
         
-            <div class="owl-carousel owl-theme mt-80"> 
+            <div class="owl-carousel owl-theme pt-80"> 
+                <div>    
+                    <div class="comment d-flex">
+                        <div>
+                            <img src="/images/person1.png" alt="person 1" class="comment-img">
+                        </div>
+                        <div class="comment-content">
+                            <div class="comment-rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <div class="comment-body">
+                                <p>"I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is"<p>
+                                <p class="comment-person">
+                                    - Emily Hartman
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="comment d-flex">
+                        <div>
+                            <img src="/images/person2.png" alt="person 1" class="comment-img">
+                        </div>
+                        <div class="comment-content">
+                            <div class="comment-rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <div class="comment-body">
+                                <p>"I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is"<p>
+                                <p class="comment-person">
+                                    - Emily Hartman
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="comment d-flex">
+                        <div>
+                            <img src="/images/person2.png" alt="person 1" class="comment-img">
+                        </div>
+                        <div class="comment-content">
+                            <div class="comment-rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <div class="comment-body">
+                                <p>"I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is"<p>
+                                <p class="comment-person">
+                                    - Emily Hartman
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="comment d-flex">
+                        <div>
+                            <img src="/images/person2.png" alt="person 1" class="comment-img">
+                        </div>
+                        <div class="comment-content">
+                            <div class="comment-rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <div class="comment-body">
+                                <p>"I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is"<p>
+                                <p class="comment-person">
+                                    - Emily Hartman
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div>    
                     <div class="comment d-flex">
                         <div>
@@ -299,7 +387,7 @@
         <div class="container">
             <h2 class="section-title">Our Clients</h2>
             <p class="section-caption">You can be the next one and may start for free</p>
-            <ul class="clients-logo d-flex mt-80">
+            <ul class="clients-logo d-flex pt-80">
                 <li><img src="images/reddit-1.png" alt=""></li>
                 <li><img src="images/robinhood-1.png" alt=""></li>
                 <li><img src="images/tunein.png" alt=""></li>
