footer row1 done

--- a/index.html
+++ b/index.html
@@ -401,6 +401,66 @@
 
 
 </main>
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-4 col-md-3">
+               <div class="footer-list">
+                <h4 class="footer-list-title">Hosting</h4>
+                <ul class="footer-menu">
+                    <li class="footer-menu-item"><a href="" class="footer-menu-link">Shared Hosting</a></li>
+                    <li class="footer-menu-item"><a href="" class="footer-menu-link">VPS Hosting</a></li>
+                    <li class="footer-menu-item"><a href="" class="footer-menu-link">Cloud Hosting</a></li>
+                    <li class="footer-menu-item"><a href="" class="footer-menu-link">Wordpress Hosting</a></li>
+                </ul>
+               </div>
+            </div>
+            <div class="col-12 col-sm-4 col-md-3">
+                <div class="footer-list">
+                    <h4 class="footer-list-title">Features</h4>
+                    <ul class="footer-menu">
+                        <li class="footer-menu-item"><a href="" footer-menu-link>Beginner Guide</a></li>
+                        <li class="footer-menu-item"><a href="" footer-menu-link>Move to Servion</a></li>
+                        <li class="footer-menu-item"><a href="" footer-menu-link>Website Builder</a></li>
+                        <li class="footer-menu-item"><a href="" footer-menu-link>Tools and Resources</a></li>
+                    </ul>
+                   </div>
+            </div>
+            <div class="col-12 col-sm-4 col-md-3">
+                <div class="footer-list">
+                    <h4 class="footer-list-title">Support</h4>
+                    <ul class="footer-menu">
+                        <li class="footer-menu-item"><a href="" footer-menu-link>Help Center</a></li>
+                        <li class="footer-menu-item"><a href="" footer-menu-link>Submit a Ticket</a></li>
+                        <li class="footer-menu-item"><a href="" footer-menu-link>Contact Us</a></li>
+                        <li class="footer-menu-item"><a href="" footer-menu-link>Blog</a></li>
+                    </ul>
+                   </div>
+            </div>
+            <div class="col-12 col-sm-4 col-md-3">
+                <h4 class="footer-list-title">Hosting</h4>
+                <div class="accepts d-flex">
+                    <div class="accept">
+                        <img src="/images/footer1.png" alt="">
+                    </div>
+                    <div class="accept">
+                        <img src="/images/footer2.png" alt="">
+                    </div>
+                    <div class="accept">
+                        <img src="/images/footer3.png" alt="">
+                    </div>
+                    <div class="accept">
+                        <img src="/images/footer4.png" alt="">
+                    </div>
+                    <div class="accept mr-0">
+                        <img src="/images/footer5.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 <script src="scripts/Jquery.min.js"></script>
 <script src="scripts/owl.carousel.min.js"></script>
 <script src="scripts/app.js"></script>
