--- a/index.html
+++ b/index.html
@@ -459,6 +459,22 @@
                 </div>
             </div>
         </div>
+        <div class="footer-bottom d-flex justify-content-between align-items-center flex-wrap">
+            <div>
+                <img src="images/logo.png" alt="" class="footer-logo">
+                <p class="mt-0">St. Patric Ave., 12345 <br> USA</p>
+            </div>
+            <div>
+                <div class="social d-flex align-items-center">
+                    <a class="social-item"><img src="images/facebook.svg" alt=""></a>
+                    <a class="social-item"><img src="images/instagram.svg" alt=""></a>
+                    <a class="social-item"><img src="images/twitter.svg" alt=""></a>
+                    <a class="social-item"><img src="images/youtube.svg" alt=""></a>
+                </div>
+                <a href="">Terms of Service</a>
+                <a href="">Privacy Policy</a>
+            </div>
+        </div>
     </div>
 </footer>
 <script src="scripts/Jquery.min.js"></script>
