--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer-bottom d-flex justify-content-between align-items-center flex-wrap">
+        <div class="footer-bottom d-flex justify-content-between flex-wrap">
             <div>
                 <img src="images/logo.png" alt="" class="footer-logo">
                 <p class="mt-0">St. Patric Ave., 12345 <br> USA</p>
@@ -471,8 +471,8 @@
                     <a class="social-item"><img src="images/twitter.svg" alt=""></a>
                     <a class="social-item"><img src="images/youtube.svg" alt=""></a>
                 </div>
-                <a href="">Terms of Service</a>
-                <a href="">Privacy Policy</a>
+                <a href="" class="terms br-1">Terms of Service</a>
+                <a href="" class="privacy">Privacy Policy</a>
             </div>
         </div>
     </div>
