--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <link rel="stylesheet" href="styles/custom.css">
     <link rel="stylesheet" href="styles/app.css">
     <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="styles/animate.min.css">
 </head>
 <body>
 <header>
     <div class="container">
         <nav class="nav">
-            <div class="logo-wrapper">
+            <div class="logo-wrapper animate__animated animate__heartBeat">
                 <img src="images/logo.png" alt="logo" class="logo-img">
             </div>
             <ul class="main-menu">
@@ -35,7 +36,7 @@
             <a class="fa fa-bars menu-icon"></a>
         </nav>
         <div class="row align-items-center header-content">
-            <div class="col-md-6 content">
+            <div class="col-md-6 content animate__animated animate__fadeInLeft">
                 <h1 class="header-title text-white mb-0">Web Hosting Easy and Secure</h1>
                 <p class="header-caption text-white">Full control of what you use and pay for</p>
                 <div class="domain d-block d-lg-flex">
@@ -51,7 +52,7 @@
                     <button class="btn-primary header-btn">CHECK AVAILABILITY</button>
                 </div>
             </div>
-            <div class="col-md-6 img">
+            <div class="col-md-6 img animate__animated animate__fadeIn">
                 <img src="images/header.png" alt="header" class="w-100">
             </div>
         </div>
@@ -65,21 +66,21 @@
             <p class="section-caption">Get the best web hosting service at the price you can afford</p>
             <div class="row pt-80">
                 <div class="col-12 col-lg-6 service-col-1">
-                    <div class="service d-flex mt-0">
+                    <div class="service d-flex mt-0 wow animate__animated animate__fadeInLeft">
                         <img src="images/service1.svg">
                         <div class="service-content">
                             <h3 class="mt-0">WE GIVE A CARE</h3>
                             <p class="m-0">Beside the support we provide you with various tools to be able to host and manage your websites</p>
                         </div>
                     </div>
-                    <div class="service d-flex">
+                    <div class="service d-flex wow animate__animated animate__fadeInLeft">
                         <img src="images/service2.svg">
                         <div class="service-content">
                             <h3 class="mt-0">TWEAK AS YOU WISH</h3>
                             <p class="m-0">Be able to customize your plan over time if needed so you pay only for what you use</p>
                         </div>
                     </div>
-                    <div class="service d-flex">
+                    <div class="service d-flex wow animate__animated animate__fadeInLeft">
                         <img src="images/service3.svg">
                         <div class="service-content">
                             <h3 class="mt-0">SECURITY AT ITS BEST</h3>
@@ -87,7 +88,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 service-col-2">
+                <div class="col-12 col-lg-6 service-col-2 wow animate__animated animate__fadeIn">
                     <img src="images/services.png" alt="services" class="w-100 services-img">
                 </div>
             </div>
@@ -98,7 +99,7 @@
             <h2 class="section-title">Don't know where to start from?</h2>
             <p class="section-caption">We've got the best articles,tools and resources to help you to start</p>
             <div class="row  pt-80">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 wow animate__animated animate__backInLeft">
                     <div class="start-box start-1">
                         <div class="start-logo start-logo1">
                             <img src="images/start-box1.svg">
@@ -109,7 +110,7 @@
                         <img src="images/Clouds.png" class="start-img-fix">
                     </div>
                 </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 wow animate__animated animate__backInRight">
                     <div class="start-box start-2">
                         <div class="start-logo start-logo2">
                             <img src="images/start-box2.svg">
@@ -131,7 +132,7 @@
             <p class="section-caption">Our service is always affordable for everyone.</p>
 
             <div class="row pt-80">
-                <div class="col-12 col-sm-6 col-lg-3">
+                <div class="col-12 col-sm-6 col-lg-3 wow animate__animated animate__slideInUp" data-wow-delay="0.1s">
                     <div class="plan">
                         <div class="plan-top">
                             <img src="images/plan1.png" alt="" class="plan-img">
@@ -146,7 +147,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-3">
+                <div class="col-12 col-sm-6 col-lg-3 wow animate__animated animate__slideInUp" data-wow-delay="0.3s">
                     <div class="plan">
                         <div class="plan-top">
                             <img src="images/plan1.png" alt="" class="plan-img">
@@ -161,7 +162,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-3">
+                <div class="col-12 col-sm-6 col-lg-3 wow animate__animated animate__slideInUp" data-wow-delay="0.5s">
                     <div class="plan">
                         <div class="plan-top">
                             <img src="images/plan1.png" alt="" class="plan-img">
@@ -176,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-3">
+                <div class="col-12 col-sm-6 col-lg-3 wow animate__animated animate__slideInUp" data-wow-delay="0.7s">
                     <div class="plan">
                         <div class="plan-top">
                             <img src="images/plan1.png" alt="" class="plan-img">
@@ -383,7 +384,7 @@
         <img src="images/dotted_square.png" class="comments-img comments-img2">
     </section>
 
-    <section class="clients">
+    <section class="clients wow animate__animated animate__fadeInUp pt-80">
         <div class="container">
             <h2 class="section-title">Our Clients</h2>
             <p class="section-caption">You can be the next one and may start for free</p>
@@ -480,5 +481,9 @@
 <script src="scripts/Jquery.min.js"></script>
 <script src="scripts/owl.carousel.min.js"></script>
 <script src="scripts/app.js"></script>
+<script src="scripts/wow.min.js"></script>
+<script>
+    new WOW().init();
+</script>
 </body>
 </html>
